deployment.yaml
apiVersion: apps/v1

kind: Deployment

metadata:
  name: aws-devops-app

spec:
  replicas: 2

  selector:
    matchLabels:
      app: aws-devops-app

  template:
    metadata:
      labels:
        app: aws-devops-app

    spec:
      containers:
        - name: aws-devops-app
          image: 093807117897.dkr.ecr.ap-south-1.amazonaws.com/aws-devops-app:1.0
          ports:
            - containerPort: 5000
