alb-service.yaml
apiVersion: v1

kind: Service

metadata:
  name: aws-devops-alb-service

spec:
  type: ClusterIP

  selector:
    app: aws-devops-app

  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
