ingress.yaml
apiVersion: networking.k8s.io/v1

kind: Ingress

metadata:
  name: aws-devops-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip

spec:
  ingressClassName: alb

  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: aws-devops-alb-service
                port:
                  number: 80
